[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Objects/UIObjects/Inventory.gd" type="Script" id=1]

[node name="Inventory" type="Node"]
script = ExtResource( 1 )

[node name="InventoryUI" type="MarginContainer" parent="."]
anchor_left = 0.33
anchor_top = 0.25
anchor_right = 0.33
anchor_bottom = 0.25
margin_right = 300.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryPanels" type="VBoxContainer" parent="InventoryUI"]
margin_right = 300.0
margin_bottom = 300.0

[node name="Title" type="MarginContainer" parent="InventoryUI/InventoryPanels"]
margin_right = 300.0
margin_bottom = 14.0

[node name="Title" type="Label" parent="InventoryUI/InventoryPanels/Title"]
margin_right = 300.0
margin_bottom = 14.0
text = "Inventory"
align = 1

[node name="InventorySlots" type="VBoxContainer" parent="InventoryUI/InventoryPanels"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 18.0
